# eKYC_braker

./: .gitignore  README.md  pyproject.toml  requirements.txt
cli/: train_yolo.sh
configs/: data_configs.yaml  model_configs.yaml  yolov8_configs.yaml
data/preprocessed/: data.yaml
data/raw/test/labels/: image-106_png.rf.1576d97e4cb46b2e9b549253621603a6.txt  image-114_png.rf.c9d577528e304e65e2acbba4020e2aad.txt  image-11_png.rf.223468c8318e26bcf18474f7f4daa349.txt  image-128_png.rf.f1cb87db0d24cb40ea05629218e38a6f.txt  image-130_png.rf.79a1aee5ea73f60dc8f9819dd7185495.txt  image-141_png.rf.fa384b95e71406c51254c7c8c88c4586.txt  image-143_png.rf.58d0ce9efe3aa62900fcf3e6c7fc4dc5.txt  image-145_png.rf.dfbe06145ac9b15921f7b27b94ac9f90.txt  image-165_png.rf.9e8e638943a414842282925b99b4e57a.txt  image-179_png.rf.60728f10778bed05f1fe28952266d527.txt  image-182_png.rf.322fc687f8dd398bf9e445468e220661.txt  image-184_png.rf.71b18265a8acbf3650072fcbdcf774b4.txt  image-207_png.rf.b9be7781c8cc73285c55d203169de77a.txt  image-21_png.rf.fa2e232551c861290bc24f7dc025a12b.txt  image-231_png.rf.55d3e6d477ffaac3825d4f539bc53903.txt  image-236_png.rf.fd3d76e8807137672a70a71a73a5fe6b.txt  (+6 more)
data/raw/train/: labels.cache
data/raw/valid/: labels.cache
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
src/data/: data_actions.py
src/middleware/: config.py  model.py
src/modeling/hotpot_yolo/: yolo_definition.py  yolo_pipeline.py
src/pipeline/trainer/: train_yolo.py
(+446 files in other folders)
