[project]
name = "ekyc-braker"
version = "0.1.0"
description = "End-to-End AI Pipeline to Extract Information on National ID Card or Others"
authors = [
    {name = "tuong.nguyen",email = "richardnguyen0715@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "keras (>=3.12.0,<4.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "labelimg (>=1.8.6,<2.0.0)",
    "ultralytics (>=8.3.232,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
